--- a/index.html
+++ b/index.html
@@ -62,15 +62,18 @@
                         <div class="speaker">
                             <img src="images/speaker1.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>1人目: 未定</h4>
-                                <p>1人目のプロフィール</p>
+                                <h4>おばちんこ</h4>
+                                <p>川崎を中心に仕事している、pythonのプログラマです。</p>
+                                <p>税理士の資格をもっています</p>
+                                <p>銀行のシステム開発をしてきました。</p>
                             </div>
                         </div>
                         <div class="speaker">
                             <img src="images/speaker2.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>2人目: 未定</h4>
-                                <p>2人目のプロフィール</p>
+                                <h4>吉田さん</h4>
+                                <p>関東在住のプログラマーです。GitHubを日常的に利用しています。</p>
+                                <p>一年間毎日コミットをしてプロフィールページのcontributionsを緑一色にしたことがあります。</p>
                             </div>
                         </div>
                     </article>
